--- a/PaoHongShuiHu/index.html
+++ b/PaoHongShuiHu/index.html
@@ -47,9 +47,9 @@
       <span style="width: 0%"></span>
     </div>
   </div>
-<script src="src/settings.c5b3f.js" charset="utf-8"></script>
+<script src="src/settings.6f806.js" charset="utf-8"></script>
 
-<script src="main.9812c.js" charset="utf-8"></script>
+<script src="main.0c7b0.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
