添加疯狂投篮小游戏。

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 			}, {
 				"name": "小驴过河",
 				"url": "XiaoLvGuoHe"
+			}, {
+				"name": "疯狂投篮",
+				"url": "BasketBall"
 			}];
 			for(var i = 0; i < urlList.length; i++) {
 //				urlList[i]
