添加六边形消除游戏。

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 				"name": "小驴过河",
 				"url": "XiaoLvGuoHe"
 			}, {
+				"name": "六边形消除",
+				"url": "LBXGame"
+			}, {
 				"name": "疯狂投篮",
 				"url": "BasketBall"
 			}];
