--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				"url": "PaoHongShuiHu"
 			}, {
 				"name": "疯狂赛车",
-				"url": "PaoHongShuiHu"
+				"url": "Cardrift"
 			}, {
 				"name": "生肖来了",
 				"url": "ChineseZodiac"
@@ -85,7 +85,7 @@
 				"url": "XiaoLvGuoHe"
 			}, {
 				"name": "六边形消除",
-				"url": "LBXGame"
+				"url": "lbxGame"
 			}, {
 				"name": "疯狂投篮",
 				"url": "BasketBall"
