--- a/WoYaoYangMaoMi/index.html
+++ b/WoYaoYangMaoMi/index.html
@@ -47,9 +47,9 @@
       <span style="width: 0%"></span>
     </div>
   </div>
-<script src="src/settings.466d1.js" charset="utf-8"></script>
+<script src="src/settings.2342b.js" charset="utf-8"></script>
 
-<script src="main.db0c0.js" charset="utf-8"></script>
+<script src="main.ab91b.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
