添加微信飞机大战、橡皮怪勇闯地下室小游戏。

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
 			}, {
 				"name": "恋爱跳一跳",
 				"url": "JumpingLover"
+			}, {
+				"name": "微信飞机大战",
+				"url": "AircraftWar"
+			}, {
+				"name": "橡皮怪勇闯地下室",
+				"url": "Basement"
 			}];
 			for(var i = 0; i < urlList.length; i++) {
 				document.write('<a href="' + urlList[i].url + '">' + urlList[i].name + '</a>&nbsp&nbsp&nbsp');
