--- a/TianTianDaDiShu/index.html
+++ b/TianTianDaDiShu/index.html
@@ -49,7 +49,7 @@
   </div>
 <script src="src/settings.f545b.js" charset="utf-8"></script>
 
-<script src="main.044db.js" charset="utf-8"></script>
+<script src="main.7dddf.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
