添加最强飞刀手游戏。

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 			}, {
 				"name": "天天打地鼠",
 				"url": "TianTianDaDiShu"
+			}, {
+				"name": "最强飞刀手",
+				"url": "ZuiQiangFeiDaoShou"
 			}];
 			for(var i = 0; i < urlList.length; i++) {
 				document.write('<a href="' + urlList[i].url + '">' + urlList[i].name + '</a>&nbsp&nbsp&nbsp');
