添加跳跳蛙游戏

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 			}, {
 				"name": "最强飞刀手",
 				"url": "ZuiQiangFeiDaoShou"
+			}, {
+				"name": "跳跳蛙",
+				"url": "JumpingFrog"
 			}];
 			for(var i = 0; i < urlList.length; i++) {
 				document.write('<a href="' + urlList[i].url + '">' + urlList[i].name + '</a>&nbsp&nbsp&nbsp');
