--- a/SnakeBricks/index.html
+++ b/SnakeBricks/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.3477a.js" charset="utf-8"></script>
+<script src="src/settings.42d73.js" charset="utf-8"></script>
 
-<script src="main.b7e8a.js" charset="utf-8"></script>
+<script src="main.dc97d.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
