添加游戏链接

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 						img: 'images/x1.jpg',
 						url: 'love2048'
 					}, {
-						title: '踩你妹',
-						img: 'images/x2.png',
-						url: 'onYourSister'
+						title: '天天打地鼠',
+						img: 'images/x23.png',
+						url: 'TianTianDaDiShu'
 					}, {
 						title: '大鸟撞小鸟',
 						img: 'images/x3.jpg',
@@ -98,10 +98,6 @@
 						title: '王者水浒',
 						img: 'images/x16.png',
 						url: 'PaoHongShuiHu'
-//					}, {
-//						title: '疯狂赛车',
-//						img: 'images/ofo小黄车密码共享平台.jpg',
-//						url: 'Cardrift'
 					}, {
 						title: '生肖来了',
 						img: 'images/x17.png',
@@ -115,6 +111,10 @@
 						img: 'images/x19.png',
 						url: 'XiaoLvGuoHe'
 					}, {
+						title: '踩你妹',
+						img: 'images/x2.png',
+						url: 'onYourSister'
+					}, {
 						title: '六边形消除',
 						img: 'images/x22.png',
 						url: 'lbxGame'
@@ -122,8 +122,30 @@
 						title: '疯狂投篮',
 						img: 'images/x21.png',
 						url: 'BasketBall'
-						
-						
+					}, {
+						title: '恋爱跳一跳',
+						img: 'images/x24.png',
+						url: 'JumpingLover'
+					}, {
+						title: '疯狂赛车',
+						img: 'images/x26.png',
+						url: 'Cardrift'
+					}, {
+						title: '最强飞刀手',
+						img: 'images/x25.png',
+						url: 'ZuiQiangFeiDaoShou'
+					}, {
+						title: '跳跳蛙',
+						img: 'images/x27.png',
+						url: 'JumpingFrog'
+					}, {
+						title: '微信飞机大战',
+						img: 'images/x28.png',
+						url: 'AircraftWar'
+					}, {
+						title: '橡皮怪勇闯地下室',
+						img: 'images/x29.png',
+						url: 'Basement'
 					}]
 				}]
 		</script>
