--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 		<div id="wrap">
 			<div class="bg"><img src="images/bg.jpg" /></div>
 			<div id="container" class="main">
-				<!-- 搜索模块 -->
 				<div id="search">
 				</div>
-				<!-- 导航模块 -->
 				<div id="dh"></div>
 			</div>
 			<div id="adlink">
-				<a href="http://www.xwintop.com/" onClick="__tj(1091111,1130,'','w-5-1','','');" target="_blank"><img src="images/bgg.png" /></a>
+				<a href="http://www.xwintop.com/" target="_blank"><img src="images/bgg.png" /></a>
 			</div>
 		</div>
 		<script type="text/javascript">
@@ -34,6 +32,10 @@
 				DH = [{
 					name: '首页',
 					data: [{
+						title: '一起消灭星星',
+						img: 'images/x6.png',
+						url: 'PopStar'
+					}, {
 						title: '浪漫2048',
 						img: 'images/x1.jpg',
 						url: 'love2048'
@@ -54,17 +56,17 @@
 						img: 'images/x5.png',
 						url: 'BubbleAge'
 					}, {
-						title: '一起消灭星星',
-						img: 'images/x6.png',
-						url: 'PopStar'
-					}, {
 						title: '开心爆爆爆',
-						img: 'images/x7.png',
+						img: 'images/x7.jpg',
 						url: 'SpinBomb'
 					}, {
 						title: '神步伐',
 						img: 'images/x8.png',
 						url: 'ThePaceOfGod'
+					}, {
+						title: '王者水浒',
+						img: 'images/x16.png',
+						url: 'PaoHongShuiHu'
 					}, {
 						title: '男左女右 ',
 						img: 'images/x9.jpg',
@@ -74,30 +76,29 @@
 						img: 'images/x10.png',
 						url: 'DragonBall'
 					}, {
-						title: '无限弹珠',
-						img: 'images/x11.png',
-						url: 'DragonBallInfinite'
+						title: '跳舞的线',
+						img: 'images/x14.jpg',
+						url: 'DancingLine'
+					}, {
+						title: '踩你妹',
+						img: 'images/x2.jpg',
+						url: 'onYourSister'
 					}, {
 						title: '一起踩白块',
 						img: 'images/x12.png',
 						url: 'OnSquares'
 					}, {
 						title: '数字+1',
-						img: 'images/x13.png',
+						img: 'images/x13.jpg',
 						url: 'AddOne'
 					}, {
-						title: '跳舞的线',
-						img: 'images/x14.png',
-						url: 'DancingLine'
+						title: '无限弹珠',
+						img: 'images/x11.png',
+						url: 'DragonBallInfinite'
 					}, {
 						title: '房产大亨',
 						img: 'images/x15.png',
 						url: 'MergeTown'
-					
-					}, {
-						title: '王者水浒',
-						img: 'images/x16.png',
-						url: 'PaoHongShuiHu'
 					}, {
 						title: '生肖来了',
 						img: 'images/x17.png',
@@ -110,10 +111,6 @@
 						title: '小驴过河',
 						img: 'images/x19.png',
 						url: 'XiaoLvGuoHe'
-					}, {
-						title: '踩你妹',
-						img: 'images/x2.png',
-						url: 'onYourSister'
 					}, {
 						title: '六边形消除',
 						img: 'images/x22.png',
