添加BB弹游戏

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
 						title: "枪神之神",
 						img: 'images/x30.png',
 						url: "qiangshen"
+					}, {
+						title: "BB弹",
+						img: 'images/x31.png',
+						url: "bbd"
 					}]
 				}]
 		</script>
