添加首页微信公众号图片

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div id="dh"></div>
 			</div>
 			<div id="adlink">
-				<a href="http://www.xwintop.com/" target="_blank"><img src="images/bgg.png" /></a>
+				<a href="http://www.xwintop.com/" target="_blank"><img src="images/bggwx.png" /></a>
 			</div>
 		</div>
 		<script type="text/javascript">
