添加合成大西瓜游戏

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 img: 'images/x4.jpg',
                 url: 'topYourSister'
             }, {
-                title: '泡泡时代',
-                img: 'images/x5.png',
-                url: 'BubbleAge'
+                title: "枪神之神",
+                img: 'images/x30.png',
+                url: "qiangshen"
             }, {
                 title: '开心爆爆爆',
                 img: 'images/x7.jpg',
@@ -111,13 +111,9 @@
                 img: 'images/x19.png',
                 url: 'XiaoLvGuoHe'
             }, {
-                title: '六边形消除',
-                img: 'images/x22.png',
-                url: 'lbxGame'
-            }, {
-                title: '疯狂投篮',
-                img: 'images/x21.png',
-                url: 'BasketBall'
+                title: "合成大西瓜",
+                img: 'images/x36.png',
+                url: "BigWatermelon"
             }, {
                 title: '恋爱跳一跳',
                 img: 'images/x24.png',
@@ -127,6 +123,10 @@
                 img: 'images/x26.png',
                 url: 'Cardrift'
             }, {
+                title: '泡泡时代',
+                img: 'images/x5.png',
+                url: 'BubbleAge'
+            }, {
                 title: '最强飞刀手',
                 img: 'images/x25.png',
                 url: 'ZuiQiangFeiDaoShou'
@@ -135,17 +135,9 @@
                 img: 'images/x27.png',
                 url: 'JumpingFrog'
             }, {
-                title: '微信飞机大战',
-                img: 'images/x28.png',
-                url: 'AircraftWar'
-            }, {
                 title: '橡皮怪勇闯地下室',
                 img: 'images/x29.png',
                 url: 'Basement'
-            }, {
-                title: "枪神之神",
-                img: 'images/x30.png',
-                url: "qiangshen"
             }, {
                 title: "BB弹",
                 img: 'images/x31.png',
@@ -166,6 +158,18 @@
                 title: "FlappyBird",
                 img: 'images/x35.png',
                 url: "FlappyBird"
+            }, {
+                title: '微信飞机大战',
+                img: 'images/x28.png',
+                url: 'AircraftWar'
+            }, {
+                title: '疯狂投篮',
+                img: 'images/x21.png',
+                url: 'BasketBall'
+            }, {
+                title: '六边形消除',
+                img: 'images/x22.png',
+                url: 'lbxGame'
             }]
         }]
 </script>
