--- a/DangTiaoWang/index.html
+++ b/DangTiaoWang/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.6ba37.js" charset="utf-8"></script>
+<script src="src/settings.cbe65.js" charset="utf-8"></script>
 
-<script src="main.5250f.js" charset="utf-8"></script>
+<script src="main.53df9.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
